--- a/TP3-BD1-2024-2.ipynb
+++ b/TP3-BD1-2024-2.ipynb
@@ -720,6 +720,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Para esta tarefa, o banco de dados sintético gerado na parte parte I foi utilizado para fazer a análise. O banco de dados possui 8 tabelas que estão com as informações resumidas a seguir."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Tabela   | Tamanho Total | Tuplas Ativas | Tuplas Mortas | Índice Principal | Tamanho Índice | Blocos do Disco |\n",
+    "|----------|---------------|---------------|---------------|------------------|----------------|-----------------|\n",
+    "| orders   | 249 MB        | 1500000       | 4500          | orders_pkey      | 32 MB          | 3258480         |\n",
+    "| lineitem | 1.144 MB      | 6001353       | 17973         | lineitem_pkey    | 129 MB         | 5628835         |\n",
+    "| part     | 36 MB         | 200000        | 0             | part_pkey        | 4.408 kB       | 88563           |\n",
+    "| customer | 32 MB         | 150000        | 0             | customer_pkey    | 3.312 kB       | 71458           |\n",
+    "| nation   | 40 kB         | 25            | 0             | nation_pkey      | 16 kB          | 19              |\n",
+    "| region   | 24 kB         | 5             | 0             | region_pkey      | 16 kB          | 8               |\n",
+    "| partsupp | 168 MB        | 800000        | 0             | partsupp_pkey    | 17 MB          | 326611          |\n",
+    "| supplier | 2.144 kB      | 10000         | 0             | supplier_pkey    | 240 kB         | 5950            |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A tabela lineitem é a maior em tamanho total (1.144 MB), indicando que ela armazena uma grande quantidade de dados ou registros detalhados. Além de possuir o maior número de tuplas ativas (6.001.353), reforçando seu papel como uma tabela principal no esquema enquanto as tabelas nation e region têm poucas tuplas ativas, consistentes com tabelas que representam categorias ou regiões fixas.\n",
+    "\n",
+    "As tuplas mortas estão presentes principalmente nas tabelas orders (4.500) e lineitem (17.973). Isso indica que operações como exclusões ou atualizações estão gerando fragmentos.\n",
+    "\n",
+    "A tabela lineitem exigiu a maior quantidade de blocos lidos diretamente do disco (5.628.835). Isso pode ser um ponto de atenção para otimização, como aumentar o uso do cache ou melhorar os índices. Em contraste, tabelas menores, como nation e region, praticamente não exigem leituras significativas do disco, o que é esperado devido ao seu tamanho reduzido. Todas as tabelas possuem índices primários bem definidos, que ajudam na eficiência de consultas baseadas em chaves primárias e tabelas maiores, como lineitem, também possuem índices secundários para melhorar a performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Tarefa 7"
    ]
   },
